--- a/template.Rmd
+++ b/template.Rmd
@@ -53,6 +53,51 @@ read_csv("data_import_examples/FAS_litters.csv", na = c("", "NA", 999, 88))
 ```
 
 # Other files formats
+```{r}
+library(readxl)
+mlb_df = read_excel("data_import_examples/mlb11.xlsx")
+```
+
+```{r}
+view(mlb_df)
+```
+
+```{r}
+Lotr_words_df = 
+  read_excel(
+    "data_import_examples/LotR_Words.xlsx",
+    range = "B3:D6"
+  )
+```
+
+## STill more file formats
+Let's read into a sas dataset
+
+```{r}
+library(tidyverse)
+library(readxl)
+library(haven)
+```
+
+```{r}
+pulse_df = read_sas("data_import_examples/public_pulse_data.sas7bdat")
+
+```
+
+# Data export 
+
+```{r}
+write_csv(Lotr_words_df, file = "Results/Lotr_words_df.csv")
+```
+
+
+# Why not r base ??
+
+```{r}
+dont_do_this_df= read.csv("data_import_examples/FAS_litters.csv")
+```
+
+
 
 
 
