--- a/data_manipulation.Rmd
+++ b/data_manipulation.Rmd
@@ -5,7 +5,7 @@ date: "2022-09-22"
 output: html_document
 ---
 
-
+# Select
 
 ```{r}
 library(tidyverse)
@@ -63,4 +63,194 @@ In larger datasets,
 
 Lastly, like other functions in dplyr, select will export a dataframe even if you only select one column. Mostly this is fine, but sometimes you want the vector stored in the column. To pull a single variable, use pull.
 
+
+earning Assessment: In the pups data, select the columns containing litter number, sex, and PD ears.
+```{r}
+select(pups_data, litter_number, sex, pd_ears)
+```
+
+# filter
+Some data tables will include rows you don’t need for your current analysis. Although you could remove specific row numbers using base R, you shouldn’t – this might break if the raw data are updated, and the thought process isn’t transparent. Instead, you should filter rows based on logical expressions using the filter function. Like select, the first argument to filter is the dataframe you’re filtering; all subsequent arguments are logical expressions.
+
+You will often filter using comparison operators (>, >=, <, <=, ==, and !=). You may also use %in% to detect if values appear in a set, and is.na() to find missing values. The results of comparisons are logical – the statement is TRUE or FALSE depending on the values you compare – and can be combined with other comparisons using the logical operators & and |, or negated using !.
+
+Some ways you might filter the litters data are:
+
+gd_of_birth == 20
+pups_born_alive >= 2
+pups_survive != 4
+!(pups_survive == 4)
+group %in% c("Con7", "Con8")
+group == "Con7" & gd_of_birth == 20
+A very common filtering step requires you to omit missing observations. You can do this with filter, but I recommend using drop_na from the tidyr package:
+```{r}
+filter(litters_data, group %in% c("Con7", "Con8"))
+```
+
+
+```{r}
+filter(litters_data, group == "Con7" & gd_of_birth == 20)
+```
+
+drop_na(litters_data) will remove any row with a missing value
+drop_na(litters_data, wt_increase) will remove rows for which wt_increase is missing.
+Filtering can be helpful for limiting a dataset to only those observations needed for an analysis. However, I recommend against the creation of many data subsets (e.g. one for each group). This can clutter up your workspace, and we’ll see good tools for the analysis of subsets before long.
+
+Learning Assessment: In the pups data:
+
+Filter to include only pups with sex 1
+Filter to include only pups with PD walk less than 11 and sex 2
+Solution:
+```{r}
+filter(pups_data, sex == 1)
+```
+
+```{r}
+filter(pups_data, pd_walk < 11 & sex == 2)
+```
+# mutate
+Sometimes you need to select columns; sometimes you need to change them or create new ones. You can do this using mutate.
+
+The example below creates a new variable measuring the difference between gd18_weight and gd0_weight and modifies the existing group variable.
+```{r}
+mutate(litters_data,
+  wt_gain = gd18_weight - gd0_weight,
+  group = str_to_lower(group)
+)
+```
+
+A few things in this example are worth noting:
+
+Your new variables can be functions of old variables
+New variables appear at the end of the dataset in the order that they are created
+You can overwrite old variables
+You can create a new variable and immediately refer to (or change) it
+Creating a new variable that does exactly what you need can be a challenge; the more functions you know about, the easier this gets.
+
+Learning Assessment: In the pups data:
+
+Create a variable that subtracts 7 from PD pivot
+Create a variable that is the sum of all the PD variables
+Solution:
+```{r}
+mutate(pups_data, 
+       pd_pivot_subtract = pd_pivot - 7,
+       sum_pd = sum(pd_ears:pd_walk))
+```
+
+
+# arrange
+In comparison to the preceding, arranging is pretty straightforward. You can arrange the rows in your data according to the values in one or more columns:
+
+```{r}
+head(arrange(litters_data, group, pups_born_alive), 10)
+```
+
+```{r}
+head(arrange(litters_data, desc(group), pups_born_alive), 10)
+```
+# %>%
+We’ve seen several commands you will use regularly for data manipulation and cleaning. You will rarely use them in isolation. For example, suppose you want to load the data, clean the column names, remove pups_survive, and create wt_gain. There are a couple of options for this kind of multi-step data manipulation:
+
+define intermediate datasets (or overwrite data at each stage)
+nest function calls
+The following is an example of the first option:
+```{r}
+litters_data_raw = read_csv("data_import_examples/FAS_litters.csv",
+  col_types = "ccddiiii")
+litters_data_clean_names = janitor::clean_names(litters_data_raw)
+litters_data_selected_cols = select(litters_data_clean_names, -pups_survive)
+litters_data_with_vars = 
+  mutate(
+    litters_data_selected_cols, 
+    wt_gain = gd18_weight - gd0_weight,
+    group = str_to_lower(group))
+litters_data_with_vars_without_missing = 
+  drop_na(litters_data_with_vars, wt_gain)
+litters_data_with_vars_without_missing
+```
+
+Below, we try the second option:
+```{r}
+litters_data_clean = 
+  drop_na(
+    mutate(
+      select(
+        janitor::clean_names(
+          read_csv("data_import_examples/FAS_litters.csv", col_types = "ccddiiii")
+          ), 
+      -pups_survive
+      ),
+    wt_gain = gd18_weight - gd0_weight,
+    group = str_to_lower(group)
+    ),
+  wt_gain
+  )
+
+litters_data_clean
+```
+
+
+These are both confusing and bad: the first gets confusing and clutters our workspace, and the second has to be read inside out.
+
+Piping solves this problem. It allows you to turn the nested approach into a sequential chain by passing the result of one function call as an argument to the next function call:
+
+```{r}
+
+litters_data = 
+  read_csv("data_import_examples/FAS_litters.csv", col_types = "ccddiiii") %>%
+  janitor::clean_names() %>%
+  select(-pups_survive) %>%
+  mutate(
+    wt_gain = gd18_weight - gd0_weight,
+    group = str_to_lower(group)) %>% 
+  drop_na(wt_gain)
+
+litters_data
+
+```
+All three approaches result in the same dataset, but the piped commands are by far the most straightforward. The easiest way to read %>% is “then”; the keyboard shortcuts are Ctrl + Shift + M (Windows) and Cmd + Shift + M (Mac).
+
+The functions in dplyr (and much of the tidyverse) are designed to work smoothly with the pipe operator. By default, the pipe will take the result of one function call and use that as the first argument of the next function call; by design, functions in dplyr will take a tibble as an input and return a tibble as a result. As a consequence, functions in dplyr are easy to connect in a data cleaning chain. You can make this more explicit by using . as a placeholder for the result of the preceding call:
+```{r}
+litters_data = 
+  read_csv("data_import_examples/FAS_litters.csv", col_types = "ccddiiii") %>%
+  janitor::clean_names(dat = .) %>%
+  select(.data = ., -pups_survive) %>%
+  mutate(.data = .,
+    wt_gain = gd18_weight - gd0_weight,
+    group = str_to_lower(group)) %>% 
+  drop_na(data = ., wt_gain)
+
+```
+
+In this example, the dataset argument is called dat in janitor::clean_names, .data in the dplyr functions, and data in drop_na – which is definitely confusing. In the majority of cases (and everywhere in the tidyverse) you’ll elide the first argument and be happy with life, but there are some cases where the placeholder is necessary. For example, to regress wt_gain on pups_born_alive, you might use:
+```{r}
+litters_data %>%
+  lm(wt_gain ~ pups_born_alive, data = .) %>%
+  broom::tidy()
+```
+
+There are limitations to the pipe. You shouldn’t have sequences that are too long; there isn’t a great way to deal with multiple inputs and outputs; and (since it’s not base R) not everyone will know what %>% means or does. That said, compared to days when R users only had the first two options, life is much better!
+
+Learning Assessment: Write a chain of commands that:
+
+loads the pups data
+cleans the variable names
+filters the data to include only pups with sex 1
+removes the PD ears variable
+creates a variable that indicates whether PD pivot is 7 or more days
+
+#solution:
+```{r}
+pups_data = 
+  read_csv("data_import_examples/FAS_pups.csv", col_types = "ccddiiii") %>%
+  janitor::clean_names() %>%
+  remove(pd_ears) %>%
+  filter(sex == 1)
+  mutate(
+    pivot_7ormore = pd_pivot > 7) 
+
+litters_data
+```
 
